tests/sksl/errors/ArrayOfVoid.glsl
### Compilation failed:

error: 3: type 'void' not allowed in this context
error: 4: type 'void' not allowed in this context
error: 6: type 'void' not allowed in this context
error: 7: type 'void' not allowed in this context
error: 8: type 'void' may not be used in an array
error: 9: type 'void' not allowed in this context
error: 10: type 'void' not allowed in this context
7 errors
